
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {char* ver; char* type; } ;


 int printf (char*,...) ;
 TYPE_1__* shellcodes ;
 int structsize (TYPE_1__*) ;
 TYPE_1__* targets ;

void usage (char *argv0) {
 int i;

 printf("usage: %s -t <target> [-s <shellcode>] "
   "[-d <connectback/bind port] [-h <connectback ip>] "
   "host [-p <port>]\n", argv0);

 printf("- targets:\n");
 for (i=0;i<structsize(targets);i++)
  printf("%d. %s\n", i, targets[i].ver);

 printf("- shellcodes: (default 0)\n");
 for (i=0;i<structsize(shellcodes);i++)
  printf("%d. %s\n", i, shellcodes[i].type);
}
